helm/agic/cnp.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-ingress-from-ip-range
spec:
  endpointSelector:
    matchLabels:
      app: nginx
  ingress:
  - fromCIDR:
    - "0.0.0.0/0"
